--- a/recipes/pesto.html
+++ b/recipes/pesto.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Pesto Recipe</title>
 </head>
 <body>
    <h1>Pesto Pasta</h1> 
